css/body.css
main .ads-content {
  width: 100%;
  background-color: rgba(0, 0, 0, 0.15);
  margin: 1rem auto;
  text-align: center;
  display: block;
  padding: 2rem;
}

section div > img {
  padding-top: 8px;
}

main .news-content {
  display: block;
  /* text-align: center; */
  /* width: 960px; */
  margin: 0 auto;
}

section .title {
  position: relative;
  display: block;
  width: 960px;
  margin: 0;
  display: flex;
  text-size-adjust: 100%;
  padding: 16px;
}

h1 {
  margin: 0 auto;
  display: inline;
  font-size: 2.5em;
  font-weight: 800;
  line-height: 48px;
  word-spacing: 6px;
  text-align: left;
}

section .photoviewer-wrapper {
  position: relative;
  text-align: center;
}

.photoviewer-wrapper img {
  width: 960px;
  display: block;
  margin: 0 auto;
}

.photoviewer-wrapper span {
  font-size: 14px;
  width: 960px;
  display: block;
  text-align: left;
  color: #666;
  padding: 8px 0;
  margin: 0 auto;
  text-align: center;
}

.news {
  /* width: 600px;
  max-width: 600px; */
  margin: 1.5rem auto;
}

.writter {
  text-decoration-color: #ccc;
  display: block;
  width: 600px;
  font-size: 18px;
  font-weight: 800;
  margin: 0 auto;
}

.writter-other {
  display: flex;
  width: 600px;
  margin: 0 auto;
}

.article-date {
  flex: 1;
  font-size: 12px;
  padding: 0.5rem;
  margin: 0;
}

.writter-other ul {
  display: flex;
  flex: 1;
  list-style: none;
  margin: 0;
  padding: 0;
  justify-content: flex-end;
}

.writter-other ul li {
  display: inline-block;
  padding: 0.5rem 1rem;
}

article p {
  word-spacing: 4px;
  text-size-adjust: 100%;
  display: block;
  font-size: 1.15rem;
  line-height: 1.65rem;
  margin: 0.5rem auto;
  width: 600px;
}

article p br {
  margin: 18px;
  display: block;
  height: 2px;
}

.short-line {
  width: 72px;
  border-bottom: 1px solid rgba(204, 204, 204);
  margin: 0.5rem auto 1rem;
}

article ul {
  list-style: none;
  max-width: 600px;
  text-align: center;
  margin: 0px auto;
  font-size: 14px;
  padding-inline-start: 0;
}

article ul li {
  margin: 0;
  padding: 0;
}

article a {
  max-width: 600px;
  margin: 0 auto;
  font-size: 14px;
  padding: 0.5rem 1rem;
  color: blue;
  text-align: center;
  text-decoration: none;
  display: block;
}

article strong {
  font-size: 20px;
  font-weight: bolder;
  display: block;
  max-width: 600px;
  margin: 0 auto;
  padding: 1rem;
}

article img {
  margin: 1rem auto 0.5rem;
  display: block;
  max-width: 680px;
}

article span {
  width: 680px;
  display: block;
  margin: 0 auto 3rem;
  font-size: 12px;
  padding: 0;
}

article .end {
  width: 600px;
  margin: 1rem auto;
  font-size: 10px;
  color: #666;
}

.article-end {
  margin-bottom: 4rem;
}

